<resources>
    <string name="memolist_aboutContent"><![CDATA[		
        <html>
            <head>
				<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
                <style type="text/css">
                	html {
                		margin: 0px;
                		padding: 0px;
                	}
                    body {
                    	color: #eee;
                    	background: #222222;
                    	font-size: 10pt;
                		margin: 0px;
                		padding: 0px;
                    }
                    a {
                    	color: #0099cc;
                    }
                </style>
            </head>
        	<body>
			No ads for now. If you like application please <a target="_blank" href="https://play.google.com/store/apps/details?id=app.memoling.android">rate&nbsp;the&nbsp;app.</a><br/><br/>
			Now also check <a target="_blank" href="http://memoling.com">memoling.com</a> where you can sync/edit your expressions!<br/><br/>
			If you spot a bug, please write a post on application <a target="_blank" href="https://www.facebook.com/pages/Memoling/144784992381757">fb&nbsp;site</a>. Thanks!
			</body>
		</html>]]>	</string>
    <string name="memolist_aboutChanges">		
		Changes v.1.11.1\n
		1. Bug fixes\n		
		Changes v.1.11.0\n
		1. Bug fixes\n
		2. Changed expression detail page\n
		3. Improved Find Word game\n
		4. Added sorting\n
		Changes v.1.10.1\n
		1. Bug fixes\n
		Changes v.1.10.0\n
		1. Improved synchronization\n
		2. Improved Anki import\n
		3. Other fixes\n
		Changes v.1.10.0 (beta)\n
		1. Synchronization (beta) - Data can now be edited/viewed online too\n
		2. Anki import (alpha)\n
		3. Some improvements and tweaks\n
		Changes v.1.9.2\n
		1. Bug fixes\n
		Changes v.1.9.1\n
		1. Improved games a little bit\n
		Changes v.1.9.0\n
		1. Bug fixes\n
		2. Added Audio Replay\n
		Changes v.1.8.3\n
		1. Bug fixes\n
		Changes v.1.8.2\n
		1. Fixed wiktionary - again\n
		2. Fixed multiple training notifications\n
		3. Fixed library download issue\n
		4. Complex expression searching works again\n
	</string>
    <string name="memolist_btnSave">Save</string>
    <string name="memolist_btnShowLang">Lang</string>
    <string name="memolist_txtAddMemoHint">Expression</string>
    <string name="memolist_txtAddMemoTranslatedHint">Translated</string>
    <string name="memolist_search">Search</string>
    <string name="memolist_voiceInput">Use voice</string>
    <string name="memolist_saveErrorMessage">Failed to save memo</string>
    <string name="memolist_ctxmenu_deactivate">Deactivate</string>
    <string name="memolist_ctxmenu_activate">Activate</string>
    <string name="memolist_ctxmenu_delete">Delete</string>
    <string name="memolist_ctxmenu_deleteTitle">Warning!</string>
    <string name="memolist_ctxmenu_deleteQuestion">Are you sure? Once deleted, it will not be possible to recover old memo. Consider deactivating.</string>
    <string name="memolist_ctxmenu_deleteYes">Yes, I am sure.</string>
    <string name="memolist_missingWords">Expression is missing or empty.</string>
    <string name="memolist_goToLibraries">Go to Libraries</string>
    <string name="memolist_settings">Settings</string>
    <string name="memolist_train">Training</string>
    <string name="memolist_startTraining">Start Training</string>
    <string name="memolist_whatsNewTitle">What\'s new (v. %s)</string>
    <string name="memolist_whatsNewOk">OK</string>
    <string name="memolist_updateCrash">Failed to update the db!</string>
    <string name="memolist_wordOfTheDay">Word of the Day</string>
    <string name="memolist_games">Games</string>
    <string name="memolist_repeatAll">Repeat All</string>
    <string name="memolist_sentencesTraining">Sentences Training</string>
    <string name="memolist_audioTraining">Audio Training</string>
    <string name="memolist_audioReplay">Audio Replay</string>
    <string name="memolist_details">Details</string>
    <string name="memolist_openScheduler">Set Training</string>
    <string name="memolist_voiceSearch">Voice Search</string>
    <string name="memolist_pendingText">Searching</string>
    <string name="memolist_more">More</string>
    <string name="memolist_wiktionary">Offline Dictionary</string>
    <string name="memolist_wiktionary_lblName">Name</string>
    <string name="memolist_wiktionary_lblDescription">Description</string>
    <string name="memolist_wiktionary_lblDownloadSize">Download Size</string>
    <string name="memolist_wiktionary_lblRealSize">Real Size</string>
    <string name="memolist_wiktionary_downloadStarted">Download started</string>
    <string name="memolist_wiktionary_getError">Connection error</string>
    <string name="memolist_wiktionary_back">Back</string>
    <string name="memolist_hangman">Hangman</string>
    <string name="memolist_crossword">Crossword</string>
    <string name="memolist_findword">Find word</string>
    <string name="memolist_wordExists">Such word already exist in the library</string>
    <string name="memolist_manualSync">Synchronize</string>
    <string name="memolist_syncDisabled">Sync Disabled</string>
    <string name="memolist_sort">Sort</string>
    <string name="memolist_sortby">Sort expressions by</string>
    <string-array name="memolist_sort_array">
        <item>Creation date</item>
        <item>Alphabetically</item>
    </string-array>
    <string name="memolist_about">About</string>
    <string name="memobaselist_title">Libraries</string>
    <string name="memobaselist_newMemoBase">New Library</string>
    <string name="memobaselist_onlineMemoBase">Online Libraries</string>
    <string name="memobaselist_ctxmenu_deactivate">Deactivate</string>
    <string name="memobaselist_ctxmenu_activate">Activate</string>
    <string name="memobaselist_ctxmenu_delete">Delete Library</string>
    <string name="memobaselist_ctxmenu_deleteImpossible">You need to have at least one library!</string>
    <string name="memobaselist_ctxmenu_deleteImpossibleOK">OK</string>
    <string name="memobaselist_ctxmenu_deleteTitle">Warning!</string>
    <string name="memobaselist_ctxmenu_deleteQuestion">Are you sure? Once deleted, it will not be possible to recover old library. Consider deactivating.</string>
    <string name="memobaselist_ctxmenu_deleteYes">Yes, I am sure.</string>
    <string name="memobaselist_ctxmenu_deleteNo">No, I have changed my mind.</string>
    <string name="memobaselist_ctxmenu_details">Details</string>
    <string name="memobaselist_ctxmenu_shareApplication">Share via Application</string>
    <string name="memobaselist_ctxmenu_shareFacebook">Share via Facebook</string>
    <string name="memobaselist_setting_about">About</string>
    <string name="memobaselist_setting_statistics">Statistics</string>
    <string name="memobaselist_addMemoBase">New Library</string>
    <string name="memobaselist_downloadMemoBase">Download Library</string>
    <string name="memobaselist_backToList">Back To List</string>
    <string name="memo_title">Expression</string>
    <string name="memo_lblCreated">Created:</string>
    <string name="memo_lblLastReviewed">Last reviewed:</string>
    <string name="memo_lblDisplayed">Displayed:</string>
    <string name="memo_lblCorrectAnswered">Correctly answered:</string>
    <string name="memo_first">FIRST</string>
    <string name="memo_lblWordA">FIRST</string>
    <string name="memo_second">SECOND</string>
    <string name="memo_lblWordB">SECOND</string>
    <string name="memo_lblActive">Active</string>
    <string name="memo_details">DETAILS</string>
    <string name="memo_copied">Copied</string>
    <string name="memo_selectTranslationTitle">Select translation</string>
    <string name="memo_selectTranslationProgress">Looking for translations</string>
    <string name="memo_thesaurus">Thesaurus</string>
    <string name="memo_dictionary">Dictionary</string>
    <string name="memo_copy">Copy</string>
    <string name="memo_play">Play (audio)</string>
    <string name="memo_refresh">Translate again</string>
    <string name="memo_description">YOUR DESCRIPTION</string>
    <string name="memo_sentences">Sentences</string>
    <string name="memo_synonyms">SYNONYMS</string>
    <string name="memo_sentencesDownloading">Downloading &#8230;</string>
    <string name="memo_sentencesSearching">Searching &#8230;</string>
    <string name="memo_notFound">Not found</string>
    <string name="memo_wikitonaryNotInstalled">Offline dictionary not found</string>
    <string name="memo_sharefacebook">Share via Facebook</string>
    <string name="memo_share">Share via Application</string>
    <string name="memo_backToList">Back to List</string>
    <string name="memo_definitionWiki">DEFINITION (Wiktionary)</string>
    <string name="memo_definitionQuizlet">DEFINITION (Powered by Quizlet.com)</string>
    <string name="memo_sentencesTatoeba">SENTENCES (Tatoeba)</string>
    <string name="memo_sentencesQuizlet">SENTENCES (Powered by Quizlet.com)</string>
    <string name="share_message">%1$s would like to share a %2$s expression with you. Click the link for more details: %3$s</string>
    <string name="about_donatePlease">Please donate</string>
    <string name="about_donateReason">Why donate?\n1. So <b>you</b> can use it - covers translations and hosting costs.\n2. Keep application ad-free and up to date.\n3. So <b>I</b> can get filthy rich.</string>
    <string name="about_lblDonate">Donate</string>
    <string name="about_uselessFacts">Useless facts</string>
    <string name="about_uselessFactsContent">Device side was developed in Java and C#. Web services in PHP (tried in ruby though). There is approx. +<b>%1$d</b> line of code. Lookup dictionary contains 246957 words. No animals were harmed during software development. You are visiting <b>%2$s</b> time this page. If you need a set of random numbers: 1, 1, 1, 1 &#8211; your welcome (truly random distribution). The biggest even prime number: 2. While you are reading this text %3$1.4f Americans have got injured using toilet. Coconuts kill a human every 2.433333333333 days. </string>
    <string name="about_lblDonateDelux">Donate DELUX</string>
    <string name="about_version">Version %s</string>
    <string name="preferences_btnRateMemoling_title">Rate!</string>
    <string name="preferences_btnRateMemoling_summary">Rate Memoling</string>
    <string name="preferences_btnGoToMemoling_title">Application Website</string>
    <string name="preferences_btnGoToMemoling_summary">Visit application page</string>
    <string name="preferences_btnClearLangPref_title">Language Preferences</string>
    <string name="preferences_btnClearLangPref_summary">Clear favorite languages</string>
    <string name="preferences_btnClearFacebook_title">Facebook Account</string>
    <string name="preferences_btnClearFacebook_summary">Log in</string>
    <string name="preferences_learningSetSize_summary">How many expressions do you want to review at once</string>
    <string name="preferences_learningSetSize_title">Learning Set Size</string>
    <string name="preferences_wordOfTheDay_title">Word of the Day Notification</string>
    <string name="preferences_wordOfTheDay_summary">Set when notification should arrive</string>
    <string name="games_win">You win</string>
    <string-array name="games_source">
        <item>Current Library</item>
        <item>English Words</item>
        <item>Spanish Words</item>
        <item>German Words</item>
        <item>French Words</item>
        <item>Italian Words</item>
        <item>Polish Words</item>
    </string-array>
    <string name="crossword_enterWord">Enter word</string>
    <string name="crossword_horizontal">Horizontal</string>
    <string name="crossword_vertical">Vertical</string>
    <string name="crossword_submit">Submit</string>
	<string name="audioreplay_shouldStop">Should stop the replay?</string>
	<string name="audioreplay_yes">Yes</string>
	<string name="audioreplay_no">No</string>
</resources>