<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoListFragment" >

    <LinearLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="right|top"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/content_background" >

                <TextView
                    android:id="@+id/memo_lblLang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/games_source" />

                <Spinner
                    android:id="@+id/matrixgame_spSource"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    tools:listitem="@layout/adapter_textdropdown" />
            </LinearLayout>

            <SurfaceView
                android:id="@+id/matrixgame_surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/matrixgame_lblResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FF222222"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/games_win"
            style="@style/Theme.Darktheme.TextView.Dark"
        android:textSize="40sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/crossword_layInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:background="#000000"
        android:orientation="vertical" 
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/crossword_enterWord"
            style="@style/Theme.Darktheme.TextView.Dark"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/crossword_btnHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/crossword_horizontal" />

            <Button
                android:id="@+id/crossword_btnVertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/crossword_vertical" />

        </LinearLayout>

        <EditText
            android:id="@+id/crossword_txtWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="none"
            style="@style/Theme.Darktheme.EditText.Dark" />

        <Button
            android:id="@+id/crossword_btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/crossword_submit" />

    </LinearLayout>

</RelativeLayout>