<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MemoListFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".WordActivity" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/memo_lblCreated" />

        <TextView
            android:id="@+id/memo_lblCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/textView3"
            android:textSize="20sp"
            android:text="memo_lblCreated" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView3"
            android:layout_below="@id/textView3"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_toLeftOf="@+id/memo_lblLastReviewed"
            android:text="@string/memo_lblLastReviewed" />

        <TextView
            android:id="@+id/memo_lblLastReviewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/textView4"
            android:textSize="20sp"
            android:text="memo_lblLastReviewed" />

        <TextView
            android:id="@+id/memo_lblDisplayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView4"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:text="memo_lblDisplayed" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView4"
            android:layout_alignTop="@id/memo_lblDisplayed"
            android:layout_toLeftOf="@id/memo_lblDisplayed"
            android:textSize="20sp"
            android:text="@string/memo_lblDisplayed" />

        <TextView
            android:id="@+id/memo_lblCorrectAnswered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView5"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:text="memo_lblCorrectAnswered" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView5"
            android:layout_alignTop="@id/memo_lblCorrectAnswered"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/memo_lblCorrectAnswered"
            android:text="@string/memo_lblCorrectAnswered" />

        <CheckBox
            android:id="@+id/memo_chbEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="20dp"
            android:text="@string/memo_lblActive" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/memo_layWebSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#222222"
        android:visibility="gone" >

        <WebView
            android:id="@+id/memo_webSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp" />
    </FrameLayout>

</RelativeLayout>